ensures the apporved shipment icon does not displace the content in the shipment display component so that if they are displayed near eachother they have the same spacing within the component

--- a/src/components/Office/ShipmentDisplay.module.scss
+++ b/src/components/Office/ShipmentDisplay.module.scss
@@ -7,7 +7,6 @@
     @include u-text('base-darker');
     @include u-text('bold');
     @include u-margin(0);
-
   }
 
   &__container {
@@ -22,19 +21,19 @@
   table {
     @include u-width(full);
 
-
     th:first-child {
       @include u-padding-left('2');
     }
 
-    th, td {
-    //  min-width: 11.01rem;
+    th,
+    td {
       @include u-vertical-align('top');
       @include u-border('base-lighter');
       @include u-font('body', 'xs');
       @include u-line-height('body', 2);
       @include u-padding('105');
-      &:first-child, &:last-child {
+      &:first-child,
+      &:last-child {
         line-height: 1.6rem;
         @include u-minw(4);
         @include u-width(4);
@@ -45,12 +44,14 @@
       @include u-padding-y('105');
     }
 
-    tr th:first-child, tr th:last-child {
+    tr th:first-child,
+    tr th:last-child {
       @include u-padding-top(2);
       @include u-padding-x(2);
     }
 
-    td:first-child, td:last-child {
+    td:first-child,
+    td:last-child {
       @include u-border(0);
     }
 
@@ -58,13 +59,19 @@
       @include u-padding-top(2);
     }
 
-    th:nth-child(2), td:nth-child(2) {
+    th:nth-child(2),
+    td:nth-child(2) {
       @include u-padding-left(0);
       @include u-maxw(3);
     }
 
     td:nth-child(2) {
-      @include u-minw('card');
+      min-width: 88px;
+      max-width: 130px;
+    }
+
+    td:nth-child(3) {
+      width: 100%;
     }
 
     tr:last-child td {
@@ -83,5 +90,8 @@
     @include u-margin-right(0);
   }
 
-
+  svg {
+    @include u-width(4);
+    margin-bottom: 5px;
+  }
 }
